--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ org.gradle.parallel=true
 minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
 loader_version=0.16.10
+owo_version=0.12.15.4+1.21
 
 # Mod Properties
 mod_version=1.0.0
